--- a/config.h.in
+++ b/config.h.in
@@ -14,6 +14,9 @@
    */
 #undef HAVE_DCGETTEXT
 
+/* Define to 1 if you have the <dlfcn.h> header file. */
+#undef HAVE_DLFCN_H
+
 /* Define if Kadu documentation is installed */
 #undef HAVE_DOC
 
