--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -96,6 +96,7 @@ LTLIBINTL = @LTLIBINTL@
 MKINSTALLDIRS = @MKINSTALLDIRS@
 MY_SUBDIRS = @MY_SUBDIRS@
 PACKAGE = @PACKAGE@
+PNG_LIBS = @PNG_LIBS@
 POSUB = @POSUB@
 PTHREAD_FLAGS = @PTHREAD_FLAGS@
 PTHREAD_LIBS = @PTHREAD_LIBS@
@@ -155,7 +156,7 @@ EXTRA_kadu_SOURCES = simlite.c simlite.h
 
 #kadu_METASOURCES = AUTO
 INCLUDES = $(QTINCDIR)
-kadu_LDADD = $(SIM) -l$(QTMT) $(LIBINTL) $(PTHREAD_LIBS) -lpng -lgadu 
+kadu_LDADD = $(SIM) -l$(QTMT) $(LIBINTL) $(PTHREAD_LIBS) $(PNG_LIBS) -lgadu 
 kadu_LDFLAGS = $(QTLIBDIR)
 kadu_DEPENDENCIES = $(SIM)
 AM_CPPFLAGS = $(PTHREAD_FLAGS) -DQT_THREAD_SUPPORT -D_REENTRANT -DBINDIR="\"$(bindir)\"" -DDATADIR="\"$(datadir)\""
