--- a/varia/Makefile.in
+++ b/varia/Makefile.in
@@ -96,6 +96,7 @@ LTLIBINTL = @LTLIBINTL@
 MKINSTALLDIRS = @MKINSTALLDIRS@
 MY_SUBDIRS = @MY_SUBDIRS@
 PACKAGE = @PACKAGE@
+PNG_LIBS = @PNG_LIBS@
 POSUB = @POSUB@
 PTHREAD_FLAGS = @PTHREAD_FLAGS@
 PTHREAD_LIBS = @PTHREAD_LIBS@
