--- a/libgadu/configure.in
+++ b/libgadu/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.17 2003/02/13 01:16:34 chilek Exp $
+dnl $Id: configure.in,v 1.18 2003/02/20 13:59:23 chilek Exp $
 
 AC_INIT(lib/libgadu.h)
 AC_PREREQ(2.50)
@@ -190,15 +190,17 @@ AC_ARG_WITH(pthread,
   [  --with-pthread          Use pthread in resolver])
 
 if test "x$with_pthread" = "xyes"; then
-  AC_CHECK_HEADER(pthread.h, [
-    AC_CHECK_LIB(pthread, pthread_create, [
-      AC_DEFINE(HAVE_PTHREAD, 1, [Define if you want to use pthread in resolver])
-      LIBS="$LIBS -lpthread"
+  ACX_PTHREAD([
+    LIBS="$PTHREAD_LIBS $LIBS"
+    CFLAGS="$CFLAGS $PTHREAD_CFLAGS"
+    CC="$PTHREAD_CC"
+    have_pthread=yes
 
-      sed 's/#undef __GG_LIBGADU_HAVE_PTHREAD/#define __GG_LIBGADU_HAVE_PTHREAD/' < lib/libgadu-config.h > lib/libgadu-config.h-
-      mv -f lib/libgadu-config.h- lib/libgadu-config.h
-      libgadu_have_pthread=yes
-    ])
+    sed 's/#undef __GG_LIBGADU_HAVE_PTHREAD/#define __GG_LIBGADU_HAVE_PTHREAD/' < lib/libgadu-config.h > lib/libgadu-config.h-
+    mv -f lib/libgadu-config.h- lib/libgadu-config.h
+    libgadu_have_pthread=yes
+  ], [
+    AC_MSG_ERROR([Your system is not supporting pthreads])
   ])
 fi
 
@@ -206,6 +208,28 @@ if test "x$libgadu_have_pthread" != "xyes"; then
   sed 's/#undef __GG_LIBGADU_HAVE_PTHREAD/\/* & *\//' < lib/libgadu-config.h > lib/libgadu-config.h-
   mv -f lib/libgadu-config.h- lib/libgadu-config.h
 fi
+
+# sprawdzamy, czy jest ,,long long'' na potrzeby obliczeñ czasów dcc
+
+AC_MSG_CHECKING([for long long])
+
+AC_TRY_RUN([
+  int main() {
+    long long a = 1LL;
+    unsigned long long b = 1LL;
+    return 0;
+  }
+], [
+  AC_MSG_RESULT([yes])
+  sed 's/#undef __GG_LIBGADU_HAVE_LONG_LONG/#define __GG_LIBGADU_HAVE_LONG_LONG/' < lib/libgadu-config.h > lib/libgadu-config.h-
+  mv -f lib/libgadu-config.h- lib/libgadu-config.h
+], [
+  AC_MSG_RESULT([no])
+  sed 's/#undef __GG_LIBGADU_HAVE_LONG_LONG.*/\/* & *\//' < lib/libgadu-config.h > lib/libgadu-config.h-
+  mv -f lib/libgadu-config.h- lib/libgadu-config.h
+])
+
+AC_CHECK_TYPE(long long, )
 
 # zachowujemy opcje dla libgadu
 
