--- a/libgadu/lib/libgadu-config.h.in
+++ b/libgadu/lib/libgadu-config.h.in
@@ -18,6 +18,9 @@
 /* Defined if this machine has __va_copy(). */
 #undef __GG_LIBGADU_HAVE___VA_COPY
 
+/* Defined if this machine supports long long. */
+#undef __GG_LIBGADU_HAVE_LONG_LONG
+
 /* Include file containing uintXX_t declarations. */
 #include <stdint.h>
 
