--- a/configure.ac
+++ b/configure.ac
@@ -9,12 +9,13 @@ AC_DEFUN(CHECK_PTHREAD,
 [
 	AC_CHECK_LIB(pthread,pthread_create,
 	[
-		PTHREAD_FLAGS=
+		PTHREAD_CPPFLAGS=
+		PTHREAD_LDFLAGS=
 		PTHREAD_LIBS=-lpthread
 	],[
 		AC_MSG_CHECKING(if compiler supports -pthread)
 		save_CPPFLAGS="$CPPFLAGS"
-		CPPFLAGS="$CXXFLAGS -pthread"
+		CPPFLAGS="$CPPFLAGS -pthread"
 		AC_TRY_LINK(
 		[
 			#include <pthread.h>
@@ -23,7 +24,8 @@ AC_DEFUN(CHECK_PTHREAD,
 		],
 		[
 			AC_MSG_RESULT(yes)
-			PTHREAD_FLAGS=-pthread
+			PTHREAD_CPPFLAGS=-pthread
+			PTHREAD_LDFLAGS=-pthread
 			PTHREAD_LIBS=
 		],[
 			AC_MSG_RESULT(no)
@@ -210,7 +212,8 @@ AC_PROG_CC
 # pthread
 
 CHECK_PTHREAD
-AC_SUBST(PTHREAD_FLAGS)
+AC_SUBST(PTHREAD_CPPFLAGS)
+AC_SUBST(PTHREAD_LDFLAGS)
 AC_SUBST(PTHREAD_LIBS)
 
 # png
