--- a/varia/Makefile.in
+++ b/varia/Makefile.in
@@ -98,7 +98,8 @@ MY_SUBDIRS = @MY_SUBDIRS@
 PACKAGE = @PACKAGE@
 PNG_LIBS = @PNG_LIBS@
 POSUB = @POSUB@
-PTHREAD_FLAGS = @PTHREAD_FLAGS@
+PTHREAD_CPPFLAGS = @PTHREAD_CPPFLAGS@
+PTHREAD_LDFLAGS = @PTHREAD_LDFLAGS@
 PTHREAD_LIBS = @PTHREAD_LIBS@
 QTINCDIR = @QTINCDIR@
 QTLIBDIR = @QTLIBDIR@
