ikonka kadu i katalog doc'ow
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@775 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/config.h.in
+++ b/config.h.in
@@ -14,7 +14,7 @@
    */
 #undef HAVE_DCGETTEXT
 
-/* Define if Kadu documentation is installed */
+/* Define if documentation is installed */
 #undef HAVE_DOC
 
 /* Define to 1 if you have the <fcntl.h> header file. */
