--- a/Makefile.in
+++ b/Makefile.in
@@ -112,6 +112,7 @@ USE_NLS = @USE_NLS@
 VERSION = @VERSION@
 am__include = @am__include@
 am__quote = @am__quote@
+docdir = @docdir@
 install_sh = @install_sh@
 
 SUBDIRS = @MY_SUBDIRS@
