--- a/varia/Makefile.in
+++ b/varia/Makefile.in
@@ -112,6 +112,7 @@ USE_NLS = @USE_NLS@
 VERSION = @VERSION@
 am__include = @am__include@
 am__quote = @am__quote@
+docdir = @docdir@
 install_sh = @install_sh@
 subdir = varia
 mkinstalldirs = $(SHELL) $(top_srcdir)/admin/mkinstalldirs
