- klasy do komunikacji z urzadzeniami dzwiekowymi.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@799 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -26,6 +26,7 @@ pixmaps.h \
 register.cpp register.h register_moc.cpp \
 search.cpp search.h search_moc.cpp \
 sms.cpp sms.h sms_moc.cpp \
+sound.cpp sound.h sound_moc.cpp \
 status.cpp status.h status_moc.cpp \
 tabbar.cpp tabbar.h tabbar_moc.cpp \
 userbox.cpp userbox.h userbox_moc.cpp \
