--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -142,6 +142,7 @@ pixmaps.h \
 register.cpp register.h register_moc.cpp \
 search.cpp search.h search_moc.cpp \
 sms.cpp sms.h sms_moc.cpp \
+sound.cpp sound.h sound_moc.cpp \
 status.cpp status.h status_moc.cpp \
 tabbar.cpp tabbar.h tabbar_moc.cpp \
 userbox.cpp userbox.h userbox_moc.cpp \
@@ -190,10 +191,10 @@ am_kadu_OBJECTS = about.$(OBJEXT) about_moc.$(OBJEXT) adduser.$(OBJEXT) \
 	pending_msgs.$(OBJEXT) personal_info.$(OBJEXT) \
 	personal_info_moc.$(OBJEXT) register.$(OBJEXT) \
 	register_moc.$(OBJEXT) search.$(OBJEXT) search_moc.$(OBJEXT) \
-	sms.$(OBJEXT) sms_moc.$(OBJEXT) status.$(OBJEXT) \
-	status_moc.$(OBJEXT) tabbar.$(OBJEXT) tabbar_moc.$(OBJEXT) \
-	userbox.$(OBJEXT) userbox_moc.$(OBJEXT) userinfo.$(OBJEXT) \
-	userinfo_moc.$(OBJEXT) userlist.$(OBJEXT) \
+	sms.$(OBJEXT) sms_moc.$(OBJEXT) sound.$(OBJEXT) sound_moc.$(OBJEXT) \
+	status.$(OBJEXT) status_moc.$(OBJEXT) tabbar.$(OBJEXT) \
+	tabbar_moc.$(OBJEXT) userbox.$(OBJEXT) userbox_moc.$(OBJEXT) \
+	userinfo.$(OBJEXT) userinfo_moc.$(OBJEXT) userlist.$(OBJEXT) \
 	userlist_moc.$(OBJEXT) updates.$(OBJEXT) vuser.$(OBJEXT) \
 	vuser_moc.$(OBJEXT)
 kadu_OBJECTS = $(am_kadu_OBJECTS)
@@ -229,6 +230,7 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/search.Po ./$(DEPDIR)/search_moc.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/simlite.Po ./$(DEPDIR)/sms.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/sms_moc.Po ./$(DEPDIR)/status.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/sound_moc.Po ./$(DEPDIR)/sound.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/status_moc.Po ./$(DEPDIR)/tabbar.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/tabbar_moc.Po ./$(DEPDIR)/updates.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/userbox.Po ./$(DEPDIR)/userbox_moc.Po \
@@ -335,6 +337,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/simlite.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sms.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sms_moc.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sound.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sound_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/status.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/status_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tabbar.Po@am__quote@
