--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -124,6 +124,7 @@ chat.cpp chat.h chat_moc.cpp \
 config.cpp config.h config_moc.cpp \
 config_file.cpp config_file.h \
 dcc.cpp dcc.h dcc_moc.cpp \
+debug.cpp debug.h \
 dock_widget.cpp dock_widget.h dock_widget_moc.cpp \
 emoticons.cpp emoticons.h \
 events.cpp events.h events_moc.cpp \
@@ -180,23 +181,24 @@ PROGRAMS = $(bin_PROGRAMS)
 am_kadu_OBJECTS = about.$(OBJEXT) about_moc.$(OBJEXT) adduser.$(OBJEXT) \
 	adduser_moc.$(OBJEXT) chat.$(OBJEXT) chat_moc.$(OBJEXT) \
 	config.$(OBJEXT) config_moc.$(OBJEXT) config_file.$(OBJEXT) \
-	dcc.$(OBJEXT) dcc_moc.$(OBJEXT) dock_widget.$(OBJEXT) \
-	dock_widget_moc.$(OBJEXT) emoticons.$(OBJEXT) events.$(OBJEXT) \
-	events_moc.$(OBJEXT) expimp.$(OBJEXT) expimp_moc.$(OBJEXT) \
-	history.$(OBJEXT) history_moc.$(OBJEXT) ignore.$(OBJEXT) \
-	ignore_moc.$(OBJEXT) kadu.$(OBJEXT) kadu_moc.$(OBJEXT) \
-	main.$(OBJEXT) message.$(OBJEXT) message_moc.$(OBJEXT) \
-	misc.$(OBJEXT) misc_moc.$(OBJEXT) network.$(OBJEXT) \
-	password.$(OBJEXT) password_moc.$(OBJEXT) \
-	pending_msgs.$(OBJEXT) personal_info.$(OBJEXT) \
-	personal_info_moc.$(OBJEXT) register.$(OBJEXT) \
-	register_moc.$(OBJEXT) search.$(OBJEXT) search_moc.$(OBJEXT) \
-	sms.$(OBJEXT) sms_moc.$(OBJEXT) sound.$(OBJEXT) \
-	sound_moc.$(OBJEXT) status.$(OBJEXT) status_moc.$(OBJEXT) \
-	tabbar.$(OBJEXT) tabbar_moc.$(OBJEXT) userbox.$(OBJEXT) \
-	userbox_moc.$(OBJEXT) userinfo.$(OBJEXT) userinfo_moc.$(OBJEXT) \
-	userlist.$(OBJEXT) userlist_moc.$(OBJEXT) updates.$(OBJEXT) \
-	vuser.$(OBJEXT) vuser_moc.$(OBJEXT)
+	dcc.$(OBJEXT) dcc_moc.$(OBJEXT) debug.$(OBJEXT) \
+	dock_widget.$(OBJEXT) dock_widget_moc.$(OBJEXT) \
+	emoticons.$(OBJEXT) events.$(OBJEXT) events_moc.$(OBJEXT) \
+	expimp.$(OBJEXT) expimp_moc.$(OBJEXT) history.$(OBJEXT) \
+	history_moc.$(OBJEXT) ignore.$(OBJEXT) ignore_moc.$(OBJEXT) \
+	kadu.$(OBJEXT) kadu_moc.$(OBJEXT) main.$(OBJEXT) \
+	message.$(OBJEXT) message_moc.$(OBJEXT) misc.$(OBJEXT) \
+	misc_moc.$(OBJEXT) network.$(OBJEXT) password.$(OBJEXT) \
+	password_moc.$(OBJEXT) pending_msgs.$(OBJEXT) \
+	personal_info.$(OBJEXT) personal_info_moc.$(OBJEXT) \
+	register.$(OBJEXT) register_moc.$(OBJEXT) search.$(OBJEXT) \
+	search_moc.$(OBJEXT) sms.$(OBJEXT) sms_moc.$(OBJEXT) \
+	sound.$(OBJEXT) sound_moc.$(OBJEXT) status.$(OBJEXT) \
+	status_moc.$(OBJEXT) tabbar.$(OBJEXT) tabbar_moc.$(OBJEXT) \
+	userbox.$(OBJEXT) userbox_moc.$(OBJEXT) userinfo.$(OBJEXT) \
+	userinfo_moc.$(OBJEXT) userlist.$(OBJEXT) \
+	userlist_moc.$(OBJEXT) updates.$(OBJEXT) vuser.$(OBJEXT) \
+	vuser_moc.$(OBJEXT)
 kadu_OBJECTS = $(am_kadu_OBJECTS)
 
 DEFS = @DEFS@
@@ -211,7 +213,8 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/chat.Po ./$(DEPDIR)/chat_moc.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/config.Po ./$(DEPDIR)/config_file.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/config_moc.Po ./$(DEPDIR)/dcc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/dcc_moc.Po ./$(DEPDIR)/dock_widget.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/dcc_moc.Po ./$(DEPDIR)/debug.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/dock_widget.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/dock_widget_moc.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/emoticons.Po ./$(DEPDIR)/events.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/events_moc.Po ./$(DEPDIR)/expimp.Po \
@@ -306,6 +309,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/config_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dcc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dcc_moc.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/debug.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dock_widget.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dock_widget_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/emoticons.Po@am__quote@
