--- a/config.h.in
+++ b/config.h.in
@@ -1,7 +1,7 @@
 /* config.h.in.  Generated from configure.ac by autoheader.  */
 
 /* Define if you want console debug output */
-#undef DEBUG_MODE
+#undef DEBUG_ENABLED
 
 /* Define distribution type of this copy of application */
 #undef DIST_TYPE
