--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -121,7 +121,7 @@ kadu_SOURCES = \
 about.cpp about.h about_moc.cpp \
 adduser.cpp adduser.h adduser_moc.cpp \
 chat.cpp chat.h chat_moc.cpp \
-config.cpp config.h config_moc.cpp \
+config_dialog.cpp config_dialog.h config_dialog_moc.cpp \
 config_file.cpp config_file.h \
 dcc.cpp dcc.h dcc_moc.cpp \
 debug.cpp debug.h \
@@ -149,8 +149,7 @@ tabbar.cpp tabbar.h tabbar_moc.cpp \
 userbox.cpp userbox.h userbox_moc.cpp \
 userinfo.cpp userinfo.h userinfo_moc.cpp \
 userlist.cpp userlist.h userlist_moc.cpp \
-updates.cpp updates.h \
-vuser.cpp vuser.h vuser_moc.cpp
+updates.cpp updates.h
 
 
 EXTRA_kadu_SOURCES = simlite.c simlite.h
@@ -180,9 +179,9 @@ PROGRAMS = $(bin_PROGRAMS)
 
 am_kadu_OBJECTS = about.$(OBJEXT) about_moc.$(OBJEXT) adduser.$(OBJEXT) \
 	adduser_moc.$(OBJEXT) chat.$(OBJEXT) chat_moc.$(OBJEXT) \
-	config.$(OBJEXT) config_moc.$(OBJEXT) config_file.$(OBJEXT) \
-	dcc.$(OBJEXT) dcc_moc.$(OBJEXT) debug.$(OBJEXT) \
-	dock_widget.$(OBJEXT) dock_widget_moc.$(OBJEXT) \
+	config_dialog.$(OBJEXT) config_dialog_moc.$(OBJEXT) \
+	config_file.$(OBJEXT) dcc.$(OBJEXT) dcc_moc.$(OBJEXT) \
+	debug.$(OBJEXT) dock_widget.$(OBJEXT) dock_widget_moc.$(OBJEXT) \
 	emoticons.$(OBJEXT) events.$(OBJEXT) events_moc.$(OBJEXT) \
 	expimp.$(OBJEXT) expimp_moc.$(OBJEXT) history.$(OBJEXT) \
 	history_moc.$(OBJEXT) ignore.$(OBJEXT) ignore_moc.$(OBJEXT) \
@@ -197,8 +196,7 @@ am_kadu_OBJECTS = about.$(OBJEXT) about_moc.$(OBJEXT) adduser.$(OBJEXT) \
 	status_moc.$(OBJEXT) tabbar.$(OBJEXT) tabbar_moc.$(OBJEXT) \
 	userbox.$(OBJEXT) userbox_moc.$(OBJEXT) userinfo.$(OBJEXT) \
 	userinfo_moc.$(OBJEXT) userlist.$(OBJEXT) \
-	userlist_moc.$(OBJEXT) updates.$(OBJEXT) vuser.$(OBJEXT) \
-	vuser_moc.$(OBJEXT)
+	userlist_moc.$(OBJEXT) updates.$(OBJEXT)
 kadu_OBJECTS = $(am_kadu_OBJECTS)
 
 DEFS = @DEFS@
@@ -211,8 +209,9 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@DEP_FILES = ./$(DEPDIR)/about.Po ./$(DEPDIR)/about_moc.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/adduser.Po ./$(DEPDIR)/adduser_moc.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/chat.Po ./$(DEPDIR)/chat_moc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/config.Po ./$(DEPDIR)/config_file.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/config_moc.Po ./$(DEPDIR)/dcc.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/config_dialog.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/config_dialog_moc.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/config_file.Po ./$(DEPDIR)/dcc.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/dcc_moc.Po ./$(DEPDIR)/debug.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/dock_widget.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/dock_widget_moc.Po \
@@ -238,8 +237,7 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/tabbar_moc.Po ./$(DEPDIR)/updates.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/userbox.Po ./$(DEPDIR)/userbox_moc.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/userinfo.Po ./$(DEPDIR)/userinfo_moc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/userlist.Po ./$(DEPDIR)/userlist_moc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/vuser.Po ./$(DEPDIR)/vuser_moc.Po
+@AMDEP_TRUE@	./$(DEPDIR)/userlist.Po ./$(DEPDIR)/userlist_moc.Po
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 CCLD = $(CC)
@@ -304,9 +302,9 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/adduser_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/chat.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/chat_moc.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/config.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/config_dialog.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/config_dialog_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/config_file.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/config_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dcc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dcc_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/debug.Po@am__quote@
@@ -354,8 +352,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/userinfo_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/userlist.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/userlist_moc.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vuser.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vuser_moc.Po@am__quote@
 
 distclean-depend:
 	-rm -rf ./$(DEPDIR)
