animowane emoty w selektorze
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@894 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -10,7 +10,7 @@ config_file.cpp config_file.h \
 dcc.cpp dcc.h dcc_moc.cpp \
 debug.cpp debug.h \
 dock_widget.cpp dock_widget.h dock_widget_moc.cpp \
-emoticons.cpp emoticons.h \
+emoticons.cpp emoticons.h emoticons_moc.cpp \
 events.cpp events.h events_moc.cpp \
 expimp.cpp expimp.h expimp_moc.cpp \
 history.cpp history.h history_moc.cpp \
