--- a/libgadu/configure.in
+++ b/libgadu/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.20 2003/04/01 22:44:26 chilek Exp $
+dnl $Id: configure.in,v 1.21 2003/04/28 20:20:06 chilek Exp $
 
 AC_INIT(lib/libgadu.h)
 AC_PREREQ(2.50)
@@ -152,6 +152,7 @@ AC_ARG_ENABLE(debug,
 
 if test "x$enable_debug" = "xno"; then 
 	CFLAGS="$CFLAGS -DGG_DEBUG_DISABLE"
+	CFLAGS_LIBGADU="$CFLAGS_LIBGADU -DGG_DEBUG_DISABLE"
 	strip_ekg="strip-ekg"
 	strip_ioctld="strip-ioctld"
 	strip_libgadu_so="strip-libgadu-so"
@@ -226,6 +227,7 @@ if test "x$with_pthread" = "xyes"; then
 	[
 		LIBS="$PTHREAD_LIBS $LIBS"
 		CFLAGS="$CFLAGS $PTHREAD_CFLAGS"
+		CFLAGS_LIBGADU="$CFLAGS_LIBGADU $PTHREAD_CFLAGS"
 		CC="$PTHREAD_CC"
 		have_pthread=yes
 
@@ -258,7 +260,6 @@ dnl
 dnl  Zachowujemy opcje dla libgadu
 dnl
 
-CFLAGS_LIBGADU="$CFLAGS_LIBGADU $CFLAGS"
 LIBS_LIBGADU="$LIBS_LIBGADU $LIBS"
 
 
