--- a/libgadu/configure.in
+++ b/libgadu/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.21 2003/04/28 20:20:06 chilek Exp $
+dnl $Id: configure.in,v 1.22 2003/06/21 10:06:17 chilek Exp $
 
 AC_INIT(lib/libgadu.h)
 AC_PREREQ(2.50)
@@ -7,6 +7,7 @@ AC_CONFIG_HEADERS(config.h)
 AC_SUBST(CFLAGS_LIBGADU)
 AC_SUBST(LIBS_LIBGADU)
 AC_SUBST(OBJS)
+AC_SUBST(IOCTLD_OBJS)
 
 AC_SUBST(strip_ekg, "")
 AC_SUBST(strip_ioctld, "")
@@ -143,22 +144,22 @@ AC_TRY_LINK([#include <stdarg.h>], [va_list a, b; __va_copy(a, b);],
 	AC_MSG_RESULT([no])
 ])
 
-dnl
-dnl  Je¶li u¿ytkownik nie chce debugowaæ, nikt mu nie ka¿e.
-dnl
-
 AC_ARG_ENABLE(debug, 
 	[  --disable-debug         Compile without debugging support])
 
-if test "x$enable_debug" = "xno"; then 
-	CFLAGS="$CFLAGS -DGG_DEBUG_DISABLE"
-	CFLAGS_LIBGADU="$CFLAGS_LIBGADU -DGG_DEBUG_DISABLE"
-	strip_ekg="strip-ekg"
-	strip_ioctld="strip-ioctld"
-	strip_libgadu_so="strip-libgadu-so"
-else
-	CFLAGS="$CFLAGS -g" 
+if test "x$enable_debug" = "xno"; then
+	AC_MSG_WARN([--disable-debug is obsolete.])
 fi
+
+dnl if test "x$enable_debug" = "xno"; then 
+dnl 	CFLAGS="$CFLAGS -DGG_DEBUG_DISABLE"
+dnl 	CFLAGS_LIBGADU="$CFLAGS_LIBGADU -DGG_DEBUG_DISABLE"
+dnl 	strip_ekg="strip-ekg"
+dnl 	strip_ioctld="strip-ioctld"
+dnl 	strip_libgadu_so="strip-libgadu-so"
+dnl else
+dnl 	CFLAGS="$CFLAGS -g" 
+dnl fi
 
 dnl 
 dnl  Jak± wersjê libgadu kompilujemy?
@@ -255,6 +256,21 @@ AC_TRY_RUN(
 	AC_MSG_RESULT([yes])
 	AC_LIBGADU_DEFINE([HAVE_LONG_LONG])
 ])
+
+dnl
+dnl  Sprawdzamy OpenSSL
+dnl
+
+AC_CHECK_OPENSSL
+
+if test "x$have_openssl" = "xyes"; then
+	OBJS="$OBJS simlite.o"
+	LDFLAGS="$OPENSSL_LIBS $LDFLAGS"
+	LIBS_LIBGADU="$LIBS_LIBGADU $OPENSSL_LIBS"
+	CFLAGS="$CFLAGS $OPENSSL_INCLUDES"
+	CFLAGS_LIBGADU="$CFLAGS_LIBGADU $OPENSSL_INCLUDES"
+	AC_LIBGADU_DEFINE([HAVE_OPENSSL])
+fi
 
 dnl
 dnl  Zachowujemy opcje dla libgadu
